2008-09-30  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        Don't run pixel comparison for text-only tests.
        https://bugs.webkit.org/show_bug.cgi?id=21124

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (dump):
        * Scripts/run-webkit-tests:


git-svn-id: svn://svn.chromium.org/blink/trunk@37129 bbb929c8-8fbe-4397-9dbb-9b2b20218538